# sparks_blog_rust

./: Cargo.toml  build.rs
html-node/html-node-core/src/typed/: elements.rs
site/: about.html  blog.html  feed.xml  index.html
site/articles/: irregularexpressions.md
site/data/: articles.json
site/post/: irregularexpressions.html  mynewstaticblog.html  newtonscradlesiminbrowser.html
site/styles/: site.css
site/wgpu-scenery/: AnimeTree.mtl  AnimeTreeLeaves.mtl
site_gen/: Cargo.toml
site_gen/src/: article.rs  layout.rs  lib.rs  markdown.rs
src/: lib.rs
