[package]
name = "site_gen"
version = "0.1.0"
edition = "2024"

[dependencies]
html-node = { path = "../html-node/html-node", features = ["typed", "pretty"] }
chrono = "0.4.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.13.0"
syntect = "5.0"
xml = "0.8"